--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@
 # JWT_SECRET=your_secret_key
 # DB_PORT =3306
 
-NODE_ENV=testing
+NODE_ENV=test
 DB_HOST=test-alltechnician-test-alltechnician.i.aivencloud.com
 DB_USER=avnadmin
 DB_PASS=AVNS_0x55T0UaBuIvq95g29P
