--- a/.env.test
+++ b/.env.test
@@ -1,6 +1,7 @@
-NODE_ENV=test
-DB_HOST=127.0.0.1
-DB_USER=root
-DB_PASS=password
-DB_NAME=database_test
+NODE_ENV=development
+DB_HOST=dev-alltechnician-dev-alltechnician.h.aivencloud.com
+DB_USER=avnadmin
+DB_PASS=AVNS_fSzzcYqlqxYMippB_RC
+DB_NAME=dev-alltechnician
 JWT_SECRET=your_secret_key
+DB_PORT=18411
