--- a/.env
+++ b/.env
@@ -6,10 +6,10 @@
 # JWT_SECRET=your_secret_key
 # DB_PORT =3306
 
-NODE_ENV=development
-DB_HOST=dev-alltechnician-dev-alltechnician.h.aivencloud.com
+NODE_ENV=test
+DB_HOST=test-alltechnician-test-alltechnician.i.aivencloud.com
 DB_USER=avnadmin
-DB_PASS=AVNS_fSzzcYqlqxYMippB_RC
-DB_NAME=dev-alltechnician
+DB_PASS=AVNS_0x55T0UaBuIvq95g29P
+DB_NAME=test-alltechnician
 JWT_SECRET=your_secret_key
-DB_PORT=18411
+DB_PORT=18642
