--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,7 @@
 NODE_ENV=development
-DB_HOST=alltechnician-dev-alltechnician-dev.b.aivencloud.com
+DB_HOST=dev-alltechnician-dev-alltechnician.h.aivencloud.com
 DB_USER=avnadmin
-DB_PASS=AVNS_kSzls0ukjeEW5THTUdz
-DB_NAME=defaultdb
+DB_PASS=AVNS_fSzzcYqlqxYMippB_RC
+DB_NAME=dev-alltechnician
 JWT_SECRET=your_secret_key
+DB_PORT=18411
